--- a/lab1/index.html
+++ b/lab1/index.html
@@ -19,7 +19,7 @@
             <a href="#footer">Контакты</a>
         </header>
         <main>
-            <img src="img\XXL_height.webp" alt="Фото еды">
+            <img src="img\img1.webp" alt="Фото еды">
             <div id="Table">
                 <dev id="about_us">
                     <h2>О нас</h2>
