--- a/lab1/index.html
+++ b/lab1/index.html
@@ -1,73 +1,83 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            Yarullin lab-1
-        </title>
-        <meta charset="utf-8">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <h1>Food construct</h1>
-        <header>
-            <a href="#about_us">О нас</a>
-            <a href="">Сообрать ланч</a>
-            <a href="">Заказы</a>
-            <a href="#footer">Контакты</a>
-        </header>
-        <main>
-            <img src="img\img1.webp" alt="Фото еды">
-            <div id="Table">
-                <dev id="about_us">
-                    <h2>О нас</h2>
-                    <p>Food construct - доставка бизнес-ланчей по Москве. Мы привезем вам горячую вкусную еду в любую точку к назначенному времени.</p>
-                    <h2>Преимущества Food construct</h2>
-                    <ol>
-                        <li>Привозим еду к назначенному времени без опозданий.</li>
-                        <li>Надежно упаковываем блюда в удобные контейнеры бесплатно.</li>
-                        <li>Доставляем весь день с 7:00 до 20:00.</li>
-                    </ol>
-                </dev>
-                <h2>Топ 4 популярных блюд</h2>
-                <table>
-                    <tr>
-                        <th>№</th>
-                        <th>Название</th>
-                        <th>Кол-во заказов в неделю</th>
-                        <th>Цена</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Лазанья</td>
-                        <td>200</td>
-                        <td>450</td>
-                    </tr>
-                     <tr>
-                        <td>2</td>
-                        <td>Том Ям с креветками</td>
-                        <td>345</td>
-                        <td>290</td>
-                    </tr>
-                     <tr>
-                        <td>3</td>
-                        <td>Норвежсикй суп</td>
-                        <td>144</td>
-                        <td>270</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Жаренная картошка с грибами</td>
-                        <td>132</td>
-                        <td>300</td>
-                    </tr>
-                </table>
-            </div>
-        </main>
-        <footer id="footer">
-            &copy Яруллин Арслан Фердинандович
-        </footer>
-    </body>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>Yarullin lab-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h1>Food construct</h1>
+<header>
+    
+    <nav>
+        <a href="#about_us">О нас</a>
+        <a href="">Собрать ланч</a>
+        <a href="">Заказы</a>
+        <a href="#footer">Контакты</a>
+    </nav>
+</header>
+<main>
+    <img src="img1.webp" alt="Фото еды" width="600" height="400">
+    <section id="about_us">
+        <h2>О нас</h2>
+        <p>Food construct - доставка бизнес-ланчей по Москве. Мы привезем вам горячую вкусную еду в любую точку к назначенному времени.</p>
+    </section>
+    <section>
+        <h2>Преимущества Food construct</h2>
+        <ul>
+            <li>Привозим еду к назначенному времени без опозданий.</li>
+            <li>Надежно упаковываем блюда в удобные контейнеры бесплатно.</li>
+            <li>Доставляем весь день с 7:00 до 20:00.</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Топ 5 популярных блюд</h2>
+        <table>
+            <tr>
+                <th>№</th>
+                <th>Название</th>
+                <th>Кол-во заказов в неделю</th>
+                <th>Цена</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Лазанья</td>
+                <td>200</td>
+                <td>450</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Том Ям с креветками</td>
+                <td>345</td>
+                <td>290</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Норвежский суп</td>
+                <td>144</td>
+                <td>270</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Жаренная картошка с грибами</td>
+                <td>132</td>
+                <td>300</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Салат Цезарь</td>
+                <td>180</td>
+                <td>320</td>
+            </tr>
+        </table>
+    </section>
+</main>
+<footer id="footer">
+    <p>&copy; Яруллин Арслан Фердинандович</p>
+
+</footer>
+</body>
 </html>
