--- a/lab1/index.html
+++ b/lab1/index.html
@@ -20,7 +20,7 @@
     </nav>
 </header>
 <main>
-    <img src="img1.webp" alt="Фото еды" width="600" height="400">
+    <img src="img1.webp" alt="Фото еды">
     <section id="about_us">
         <h2>О нас</h2>
         <p>Food construct - доставка бизнес-ланчей по Москве. Мы привезем вам горячую вкусную еду в любую точку к назначенному времени.</p>
